--- a/tool/src/main/webapp/app/app.component.html
+++ b/tool/src/main/webapp/app/app.component.html
@@ -4,12 +4,16 @@
 			<h1>Consultation des résultats intermédiaires</h1>
 		</div>
 	</div>
-	
+
 	<div class="row">
-		<search-panel></search-panel>
+		<div class="col-xs-12 col-md-4">
+			<search-form></search-form>
+		</div>
 	</div>
 
 	<div class="row">
-		<result-panel></result-panel>
+		<div class="col-xs-12 col-md-8">
+			<course-list></course-list>
+		</div>
 	</div>
 </div>
