--- a/tool/src/main/webapp/sass/style.scss
+++ b/tool/src/main/webapp/sass/style.scss
@@ -6,8 +6,19 @@ tbody tr {
 	height: 36px;
 }
 
+.controls .form-group {
+	margin-bottom: 5px;
+}
+
+.controls button {
+	width: 200px;
+}
+
 .course-list {
+	border: 1px solid #ccc;
+	padding: 5px;
 	padding-top: 20px;
+	margin-top: 10px;
 }
 
 .course-list select {
@@ -15,7 +26,7 @@ tbody tr {
 }
 
 .identifier {
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 .bold {
