--- a/tool/src/main/webapp/app/components/academic-session-list.component.html
+++ b/tool/src/main/webapp/app/components/academic-session-list.component.html
@@ -1,6 +1,8 @@
 <label for="sessionList">Session</label>
 
-<select class="form-control">
-	<option value="none"></option>
-	<option *ngFor="let session of sessions" value="{{session.code}}">{{session.name}}</option>
-</select>
+<form [formGroup]="form">
+	<select class="form-control" formControlName="sessionList" (change)="onSessionChanged($event)">
+		<option value="none"></option>
+		<option *ngFor="let session of sessions" value="{{session.code}}">{{session.name}}</option>
+	</select>
+</form>
