Deuxième écran, pauffinage

--- a/tool/src/main/webapp/app/components/course-list.component.html
+++ b/tool/src/main/webapp/app/components/course-list.component.html
@@ -1,5 +1,5 @@
 <div class="course-list">
-	<div class="identifier">
+	<div class="identifier" style="margin-top: 20px;">
 		<div>
 			<span class="bold">Nom:</span>
 			<span *ngIf="!!user">{{user.fullName}}</span>
