--- a/tool/src/main/webapp/app/components/course-results.component.html
+++ b/tool/src/main/webapp/app/components/course-results.component.html
@@ -1,9 +1,5 @@
-<div>
-	<button type="button" (click)="onBackClicked($event)">Retour à la liste des cours</button>
-</div>
-
 <div class="course-results">
-	<div class="identifier">
+	<div class="identifier" style="margin-bottom: 20px;">
 		<div>
 			<span class="bold">Matricule:</span>
 			<span *ngIf="!!user">{{user.matricule}}</span>
@@ -16,7 +12,13 @@
 
 		<div>
 			<span class="bold">Cours:</span>
-			<span *ngIf="!!course">{{course.number}}&nbsp;-&nbsp;{{course.description}}</span>
+			<span *ngIf="!!courses && courses.length > 0"><span class="glyphicon glyphicon-chevron-left action" (click)="onPreviousCourse()"></span>{{courses[courseIndex].number}}&nbsp;-&nbsp;{{courses[courseIndex].description}}<span class="glyphicon glyphicon-chevron-right action" (click)="onNextCourse()"></span></span>
 		</div>
 	</div>
+
+	<div style="margin-bottom: 10px;">
+		<button type="button" (click)="onBackClicked($event)"><span class="glyphicon glyphicon-chevron-left"></span>Retour à la liste des cours</button>
+	</div>
+
+	<grid (sortRequested)="onAssignmentsSort($event)"></grid>
 </div>
