--- a/tool/src/main/webapp/app/components/academic-session-list.component.html
+++ b/tool/src/main/webapp/app/components/academic-session-list.component.html
@@ -2,7 +2,7 @@
 
 <form [formGroup]="form">
 	<select class="form-control" formControlName="sessionList" (change)="onSessionChanged($event)">
-		<option value="none">Afficher toute les sessions</option>
+		<option value="none">Afficher toutes les sessions</option>
 		<option *ngFor="let session of sessions" value="{{session.code}}">{{session.name}}</option>
 	</select>
 </form>
