--- a/tool/src/main/webapp/app/components/grid/grid.component.html
+++ b/tool/src/main/webapp/app/components/grid/grid.component.html
@@ -1,6 +1,6 @@
 <table class="table">
 	<thead>
-		<tr>
+		<tr class="no-select">
 			<th *ngFor="let col of columns; let i = index" class="{{col.id}}" attr.data-index="{{i}}">
 				<div class="gridHeader" (click)="onSort($event)">
 					{{col.title}}
