--- a/tool/src/main/webapp/app/components/app.component.html
+++ b/tool/src/main/webapp/app/components/app.component.html
@@ -7,7 +7,7 @@
 
 	<div class="row" [hidden]="currentView !== 'courseList'">
 		<div class="col-xs-12 col-md-4">
-			<search-form (searchCompleted)="onSearchCompleted($event)"></search-form>
+			<search-form (searchStarted)="onSearchStarted($event)" (searchCompleted)="onSearchCompleted($event)"></search-form>
 		</div>
 	</div>
 
